# tneidarg

./: .gitignore  README.md  compile_cuda.sh  tneidarg.cabal
cbits/: cuda_glue.cc  cuda_kernels.cu  cuda_kernels.h
exe/: Main.hs
src/: LSTM.hs  Main.hs  Tensor.hs
test/: Main.hs
