cabal-version:      3.0
name:               tneidarg
version:            0.1.0.0
synopsis:           CUDA-based linear algebra operations for Haskell
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Mikko Juola
maintainer:         mikko.juola@iki.fi
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts "-with-rtsopts=-N -A128m" -O2

library
    import:           warnings
    exposed-modules:  Tensor, LSTM
    c-sources:        cbits/cuda_glue.cc
    extra-libraries:  cudart, cublas
    build-depends:    base >=4.9, half, primitive, vector
    hs-source-dirs:   src
    default-language: GHC2021

executable tneidarg-toy
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   exe
    ghc-options:      -optl=./cbits/libcuda_kernels.so
    build-depends:    async, base >=4.9, time, tneidarg, random
    default-language: GHC2021
